--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "name": "Sandy Row Payment Tracker",
     "icons": [
         {
-            "src": "/src/assets/preact.svg",
-            "type": "image/svg+xml",
+            "src": "/src/assets/sandy_row.png",
+            "type": "image/png",
             "sizes": "144x144"
         },
         {
@@ -14,7 +14,7 @@
         }
     ],
     "start_url": "/index.html",
-    "background_color": "#ffffff",
+    "background_color": "#B0BEC5",
     "display": "standalone",
     "scope": "/",
     "orientation": "portrait",
