--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-    "public": true
+    "public": true,
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/index.html" }
+      ]
+    
 }
