--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         }
 
     ],
-    "start_url": "/index.html",
+    "start_url": "/",
     "background_color": "#B0BEC5",
     "display": "standalone",
     "scope": "/",
