--- a/manifest.json
+++ b/manifest.json
@@ -15,10 +15,10 @@
 
     ],
     "start_url": "/",
-    "background_color": "#B0BEC5",
+    "background_color": "B0BEC5",
     "display": "standalone",
     "scope": "/",
     "orientation": "portrait",
-    "theme_color": "#3f51b5"
+    "theme_color": "B0BEC5"
   }
   
